@@ -193,7 +193,7 @@ CAPPLET_LIBS="$CAPPLET_LIBS $XCURSOR_LIBS"
 dnl ==============
 dnl gswitchit
 dnl ==============
-PKG_CHECK_MODULES(LIBGNOMEKBD, [libgnomekbd >= 2.21 libxklavier >= 3.2])
+PKG_CHECK_MODULES(LIBGNOMEKBD, [libgnomekbd >= 2.21 libxklavier >= 3.3])
 AC_SUBST(LIBGNOMEKBD_CFLAGS)
 AC_SUBST(LIBGNOMEKBD_LIBS)
 
